# penkr

./: .gitignore  Cargo.toml  docker-compose.yml
config/: pnkr.toml
sql/pg/: introspect.sql
src/: app.rs  core.rs  main.rs  modules.rs  utils.rs
src/api/: auth.rs  collection.rs  db.rs  mod.rs
src/app/: auth.rs  db.rs
src/core/: db.rs  de.rs  schema.rs
src/internal/: api.rs  auth.rs  db.rs  de.rs  mod.rs
src/models/: schema.rs
src/modules/: admin_panel.rs  restful.rs  setup_wizard.rs
src/utils/: common.rs  db.rs  mod.rs  parse_expander.rs  query_builder.rs  responder.rs  setup.rs
ui/: index.html  package.json  vite.config.ts  windi.config.ts
ui/src/: App.tsx  index.tsx
ui/src/components/: CreateTable.tsx  Icons.tsx  Sidenav.tsx
ui/src/components/forms/: Group.tsx  Input.tsx  Label.tsx
