[package]
name = "penkr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.2"
actix-cors = "0.6"
async-trait = "0.1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-tuple-vec-map = "1.0.1"
sqlx = { version = "0.6", features = [ "runtime-actix-rustls" , "postgres", "sqlite", "mysql", "chrono" ] }
log = "0.4"
env_logger = "0.9"
toml = "0.5.9"
indexmap = { version = "1.9.1", features = [ "serde" ] }
